apps/base/speedtest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: speedtest
  labels:
    homelab.io/app: "true"
    homelab.io/needs-database: "true"
