apps/base/speedtest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest
spec:
  ports:
    - port: 80
  selector:
    app: speedtest
  type: ClusterIP
